--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+    <ion-toolbar>
+        <ion-button slot="start" class="light">
+          <ion-back-button></ion-back-button>
+        </ion-button>
+        <ion-title>
+          Tab 3
+        </ion-title>
+        <ion-button slot="end" class="light">
+          <ion-icon name="search"></ion-icon>
+        </ion-button>
+      </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+    <ion-button ion-button block color="danger">Show Checkbox Alert</ion-button>
+  </ion-content>
