--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,4 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
@@ -15,6 +14,10 @@
       <ion-icon name="send"></ion-icon>
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
 
+    <ion-tab-button tab="tab4">
+      <ion-icon name="water"></ion-icon>
+      <ion-label>Tab Four</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
 </ion-tabs>
