--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaulthref="">Back</ion-back-button>
+      <ion-back-button defaulthref=""></ion-back-button>
     </ion-buttons>
     <ion-title>
       Home
