--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,6 +2,10 @@
 // http://ionicframework.com/docs/theming/
 
 /** Ionic CSS Variables **/
+
+@import "theme.light";
+@import "theme.dark";
+
 :root {
   /** primary **/
   --ion-color-primary: #3880ff;
