--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,26 +1,18 @@
 <ion-header>
   <ion-toolbar>
-    <ion-nav-pop>
-    <ion-title>
-      Tab One
-    </ion-title>
-    </ion-nav-pop>
+    <ion-nav-pop> <ion-title> Tab One </ion-title> </ion-nav-pop>
   </ion-toolbar>
 </ion-header>
-
-
-<ion-list>
-  <ion-item *ngFor="let names of name; let i of index" routerLink="details">
-    <h1>Hola</h1> 
-    <p>{{names.name}}</p>
-  </ion-item>
-</ion-list>
-  <ion-button ion-button *ngFor="let names of name; let i of index" [ngStyle]="{'content':names.color}" (click)="changescolores(names.name, names.color)" clear>{{names.color}}</ion-button> 
 <ion-content>
-  
-<ion-button ion-button color="light">Light Clear</ion-button>
-<ion-button ion-button clear>Primary Clear</ion-button>
-<ion-button ion-button color="secondary" clear>Secondary Clear</ion-button>
-<ion-button ion-button color="danger" clear>Danger Clear</ion-button>
-<ion-button ion-button color="dark" clear>Dark Clear</ion-button>
+  <ion-list>
+    <ion-item *ngFor="let names of name; let i of index" routerLinkActive="active"routerLink="[{{names.name}}]" >
+      <h1>Hola</h1> 
+      <p>{{names.name}}</p>
+      <ion-icon float-right ios="ios-arrow-dropright" md="md-arrow-dropright" name="arrow-dropright"></ion-icon>
+    </ion-item>
+  </ion-list>
+
+  <ion-button ion-button *ngFor="let names of name; let i of index" [ngStyle]="{'content':names.color}" (click)="changescolores(names.name, names.color)" clear>{{names.color}}</ion-button> 
+
 </ion-content>
+
