{IMP} Adding like and save options view and animation to load, change de app icon

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,16 +6,26 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card *ngFor="let info of infos; let i of index" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-    routerLink="{{info.id}}">
+  <ion-card *ngFor="let info of infos; let i of index">
+    <ion-card-header routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/details/{{info.id}}">
+      <ion-label>Usuario</ion-label>
+      <ion-icon float-right ios="ios-arrow-dropright" md="md-arrow-dropright" name="arrow-dropright"></ion-icon>
+    </ion-card-header>
     <ion-card-content [ngStyle]="{'width': 320, 'height': 510}">
-      <ion-card-header>
-        <ion-label>Usuario</ion-label>
-        <ion-icon float-right ios="ios-arrow-dropright" md="md-arrow-dropright" name="arrow-dropright"></ion-icon>
-      </ion-card-header>
-      <ion-img width="350px" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
-      <br>
-      <ion-card-title>{{info.displayName}}</ion-card-title>
+      <ion-item routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/details/{{info.id}}">
+        <ion-img width="auto" height="350px" src="{{info.image}}" alt="{{info.displayName}}"></ion-img>
+      </ion-item>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-icon name="heart" [color]="color" (click)="clickEventHandler($event.target)"></ion-icon>
+        </ion-buttons>
+
+        <ion-buttons slot="end">
+          <ion-icon name="archive" [color]="colorSecundary" (click)="clickEventHandlerSave($event.target)"></ion-icon>
+        </ion-buttons>
+
+      </ion-toolbar>
+      <ion-card-title routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/details/{{info.id}}">{{info.displayName}}</ion-card-title>
     </ion-card-content>
   </ion-card>
 </ion-content>
