{IMP} implementation of Sing up and Sing out with google

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,6 +13,7 @@
 </ion-header>
 
 <ion-content>
+
   <ion-list>
     <ion-item>
       <ion-label floating>Username</ion-label>
@@ -23,8 +24,12 @@
       <ion-input type="password"></ion-input>
     </ion-item>
   </ion-list>
-
-  <ion-button shape="round" color="primary" fill="outline">Sign In
-    <ion-icon name="person"></ion-icon>
-  </ion-button>
+  <ion-item-group>
+      <ion-button shape="round" color="primary" fill="outline">Sign In
+          <ion-icon name="person"></ion-icon>
+        </ion-button>
+        <ion-button (click)="handleauth()" >Sign in with google</ion-button>
+      <ion-button *ngIf="user" color="danger" (click)="handleLogout()" >Sign out</ion-button>
+  </ion-item-group>
+  
 </ion-content>
