Adding xat component

--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -17,5 +17,10 @@
     <img width="320" src="{{info.image}}"  class="app-logo" alt="{{info.displayName}}">
     <br>
     <strong>{{info.image}}</strong>
+    <ion-buttons>
+      <ion-button> <i class="fa fa-shopping-cart"></i> Carrito</ion-button>
+      <ion-button>Reservar</ion-button>
+    </ion-buttons>
+    
   </ion-item>
 </ion-content>
