--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -10,17 +10,17 @@
 </ion-header>
 
 <ion-content padding>
-       <!-- <form [formGroup]="classroomForm">
+        <form>
                 <ion-item>
                   <ion-label position="floating">Classroom Name</ion-label>
-                  <ion-input type="text" formControlName="class_name"></ion-input>
+                  <ion-input type="text"></ion-input>
                 </ion-item>
                 <ion-item-divider>
                   <ion-label>
-                    Students <ion-button shape="round" (click)="addBlankStudent()"><ion-icon name="add-circle"></ion-icon></ion-button>
+                    Students <ion-button shape="round"><ion-icon name="add-circle"></ion-icon></ion-button>
                   </ion-label>
                 </ion-item-divider>
-                <div formArrayName="students">
+                <!--<div formArrayName="students">
                   <ion-item *ngFor="let student of studentData.controls; let i=index" [formGroupName]="i">
                     <ion-label position="floating">Student Name</ion-label>
                     <ion-row>
@@ -32,9 +32,9 @@
                       </ion-col>
                     </ion-row>
                   </ion-item>
-                </div>
-                <ion-button shape="round" color="primary" expand="block" [disabled]="!classroomForm.valid" (click)="updateClassroom()">Submit</ion-button>
-              </form>-->
+                </div>-->
+                <ion-button shape="round" color="primary" expand="block" [disabled]="!classroomForm.valid">Submit</ion-button>
+              </form>
 
     <ion-item [ngStyle]="{'text-align': center}" *ngFor="let info of infos; let i of index">
         <img width="320" src="{{info.image}}" class="app-logo" alt="{{info.displayName}}">
