--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
-      <ion-back-button defaulthref=""></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Login
     </ion-title>
     <ion-buttons slot="end">
       <ion-icon name="search"></ion-icon>
@@ -25,11 +25,10 @@
     </ion-item>
   </ion-list>
   <ion-item-group>
-      <ion-button shape="round" color="primary" fill="outline">Sign In
-          <ion-icon name="person"></ion-icon>
-        </ion-button>
-        <ion-button (click)="handleauth()" >Sign in with google</ion-button>
-      <ion-button *ngIf="userbool" color="danger" (click)="handleLogout()" >Sign out</ion-button>
+      <ion-button shape="round" color="primary" expand="block" fill="outline" [disabled]="!classroomForm.valid">
+          <ion-icon name="person"></ion-icon>Submit</ion-button>
+    <ion-button (click)="handleauth()">Sign in with google</ion-button>
+    <ion-button *ngIf="userbool" color="danger" (click)="handleLogout()">Sign out</ion-button>
   </ion-item-group>
-  
+
 </ion-content>
