--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,23 +1,12 @@
 <ion-tabs>
   <ion-tab-bar slot="start">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="bookmarks"></ion-icon>
+      <ion-label>Books</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
-    </ion-tab-button>
-
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab4">
-      <ion-icon name="water"></ion-icon>
-      <ion-label>Tab Four</ion-label>
+      <ion-icon name="cafe"></ion-icon>
+      <ion-label>Coffees</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
