--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="start">
+  <ion-tab-bar color="danger" slot="start">
     <ion-tab-button tab="tab1">
       <ion-icon name="bookmarks"></ion-icon>
       <ion-label>Books</ion-label>
