Fixing bug with login and adding more modules

--- a/src/app/coffee-details/coffee-details.component.html
+++ b/src/app/coffee-details/coffee-details.component.html
@@ -20,7 +20,8 @@
     <p>{{info.kind}}</p>
   </ion-item>
   <ion-buttons>
-    <ion-button> Carrito</ion-button>
-    <ion-button>Reservar</ion-button>
+    
+    <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/card/{{id}}" > Carrito</ion-button>
+    <ion-button>Gardar</ion-button>
   </ion-buttons>
 </ion-content>
