--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,18 @@
+<ion-header>
+  <ion-toolbar color="danger">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+      Login
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-icon name="search"></ion-icon>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
 <div class="auth-page">
   <div class="container page">
     <div class="row">
@@ -42,3 +57,4 @@
     </div>
   </div>
 </div>
+</ion-content>
