--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,12 +4,8 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-nav-pop>
-      <ion-title> StyleCoffee Coffee </ion-title>
+      <ion-title> Events </ion-title>
     </ion-nav-pop>
-    <ion-avatar slot="end" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/profile">
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
-        alt="https://cdn2.iconfinder.com/data/icons/scenarium-vol-4/128/002_avatar_man_profile_account_user_male-128.png">
-    </ion-avatar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
