--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
   <ion-tab-bar color="danger" slot="start">
     <ion-tab-button tab="tab1">
-      <ion-icon name="bookmarks"></ion-icon>
-      <ion-label>Books</ion-label>
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Pagina principal</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="tab3">
-      <ion-icon name="cafe"></ion-icon>
-      <ion-label>Coffees</ion-label>
+      <ion-icon name="heart"></ion-icon>
+      <ion-label>Favoritos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
