--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -12,8 +12,27 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <p>
-    card works!
-  </p>
+  <form id="contact_form" name="contact_form" className="form-contact" onSubmit={this.handleSubmit}>
+    <h1 id="heading">Comprar un producto</h1>
+      <div className="contact_item">
+        <label htmlFor="number">Numero de cuenta</label><br/>
+        <input type="text" size="20" name="number" onChange={this.handleChange} required/>
+      </div>
+      <div className="contact_item">
+        <label htmlFor="exp_month">Expiration Month</label><br/>
+        <input type="text" size="2" name="exp_month" onChange={this.handleChange} required/>
+      </div>
+      <div className="contact_item">
+        <label htmlFor="exp_year">Expiration Year</label><br/>
+        <input type="text" size="4" name="exp_year" onChange={this.handleChange} required/>
+      </div>
+      <div className="contact_item">
+        <label htmlFor="cvc">CVC</label><br/>
+        <input type="text" size="4" name="cvc" onChange={this.handleChange} required/>
+      </div>
+      <div className="contact_item">
+        <button className="btn-search" type="submit">Pay</button>
+      </div>
+    </form>
 </ion-content>
 
