--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -20,7 +20,7 @@
     <p>{{info.displayName}}</p>
   </ion-item>
   <ion-buttons>
-    <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/reserve/{{id}}"> Rservar</ion-button>
+    <ion-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/reserve/add/{{id}}">Reservar</ion-button>
     <ion-button >Favoritos</ion-button>
   </ion-buttons>
 </ion-content>
